--- a/dev-nifi-bucket/bucket.yml
+++ b/dev-nifi-bucket/bucket.yml
@@ -1,5 +1,5 @@
 flows:
-  7e9eac12-ad47-4ae6-8e50-c31a82c1f7e9: {ver: 4, file: Domain-API.snapshot, comments: '',
-    author: anonymous, created: 1601790597554, flowName: Domain-API, flowDesc: ''}
+  7e9eac12-ad47-4ae6-8e50-c31a82c1f7e9: {ver: 5, file: Domain-API.snapshot, comments: working
+      pipeline, author: anonymous, created: 1601819625217, flowName: Domain-API, flowDesc: ''}
 layoutVer: 1
 bucketId: aace3296-86f6-4a1b-84ef-2cb1ff19ba20
