--- a/dev-nifi-bucket/bucket.yml
+++ b/dev-nifi-bucket/bucket.yml
@@ -1,6 +1,5 @@
 flows:
-  7e9eac12-ad47-4ae6-8e50-c31a82c1f7e9: {ver: 7, file: Domain-API.snapshot, comments: move
-      groovy script into body, author: anonymous, created: 1602832974569, flowName: Domain-API,
-    flowDesc: ''}
+  7e9eac12-ad47-4ae6-8e50-c31a82c1f7e9: {ver: 8, file: Domain-API.snapshot, comments: '',
+    author: anonymous, created: 1602939190093, flowName: Domain-API, flowDesc: ''}
 layoutVer: 1
 bucketId: aace3296-86f6-4a1b-84ef-2cb1ff19ba20
